gcc/testsuite/g++.dg/modules/legacy-0b.H
// { dg-additional-options "-fmodule-legacy=\"<sys\"" }
// { dg-error "appears to be double quoted" "" { target *-*-* } 0 }
